--- a/Project/environment.yml
+++ b/Project/environment.yml
@@ -4,6 +4,7 @@ dependencies:
   - python == 3.7.11
   - numpy
   - pip
+  - opencv == 3.4.2
   - pip:
     - gym[atari]
     - autorom[accept-rom-license]
